# shinobi-online-server

./: .gitignore  CMakeLists.txt  README.md  config.lua  forgottenserver.s3db  versions.xml
cmake/: FindGMP.cmake
data/XML/: channels.xml  groups.xml  outfits.xml  quests.xml  stages.xml  vocations.xml
data/actions/: actions.xml
data/creaturescripts/: creaturescripts.xml
data/creaturescripts/scripts/: CapKikais.lua  Direction.lua  Exame Chunin Fase 2.lua  Exame Chunin.lua  GraduationSystem.lua  Vocation_Outfit.lua  advancesave.lua  bounty.lua  creatureMove.lua  death.lua  extendedopcode.lua  firstitem.lua  hachimonAdvance.lua  hit.lua  kagemaneDeath.lua  login.lua  mute.lua  nomove.lua  partyAndGuildProtection.lua  peixe.lua  peixeDead.lua  pesca.lua  petCombat.lua  petdeath.lua  petkill.lua  petstats.lua  pointsup.lua  rest.lua  skillAdvanced.lua  stamina.lua  task.lua
data/globalevents/: globalevents.xml
data/globalevents/scripts/: Exame Chunin Startup.lua  dia.lua  init.lua  noite.lua  propaganda.lua  save.lua  savehouse.lua  saveplayer.lua  tarde.lua
data/items/: items.otb  items.xml
data/lib/: 000-constant.lua  050-function.lua  100-compat.lua  Akimichi_LIB.lua  Exame Chunin.lua  Function Lib.lua  Hachimon_LIB.lua  Inuzuka_LIB.lua  Kagemane_lib.lua  Missao_LIB.lua  NPCBattle_config.lua  NPCUpgrader_config.lua  ShinobiWorldGlobal_LIB.lua  checkJutsu_LIB.lua  food_LIB.lua  lib_Tasks.lua  newDMG_lib.lua  newFunction_lib.lua  pesca.lua  pet.lua  rickLib.lua  stamina_LIB.lua
data/monster/: Fish.xml  Medium Kikkais.xml  Small Kikais.xml  monsters.xml
data/monster/Annelids/: rotworm.xml
data/monster/Aracnids/: poison spider.xml  spider.xml  tarantula.xml
data/monster/Bears/: bear.xml
data/monster/Bunshin/: bunshin.xml  mushi bunshin.xml
data/monster/Canines/: wolf.xml
data/monster/Demons/: fire devil.xml
data/monster/Misc/: bat.xml  deer.xml  rabbit.xml
data/monster/Pet/: Pet.xml
data/monster/Shinobi/: Dead Shogun.xml  Dorobou.xml  Dourobou.xml  Fire Monk.xml  Gorotsuki.xml  Hiroku.xml  Hiruko.xml  Hito.xml  Hizoku.xml  Hizuko.xml  Koichi.xml  Kora.xml  Kumori.xml  Kurama.xml  Maka.xml  Sanzoku.xml  Sanzuku.xml  Shinnou.xml  Shitoru.xml  Shitsu.xml  Tenzin.xml  Toguro.xml  Touzoku.xml  Touzuko.xml  Tzuko.xml  Yuugen.xml  Zig.xml  bat.xml  bear.xml  cave rat.xml  deer.xml  monk.xml  pig.xml  rabbit.xml  rat.xml  snake.xml  tiger.xml  wolf.xml
data/movements/: movements.xml
data/movements/scripts/: Taijutsu System.lua  TilePremium.lua  blockDP.lua  explosiveTagM.lua  kagemane.lua  ninjutsu sword.lua  swimming.lua
data/npc/: Aburame_citizen1.xml  Aburame_citizen2.xml  Akimichi_citizen1.xml  Akimichi_citizen2.xml  Ayame.xml  Banker.xml  Cat.xml  Citizen.xml  Citizen10.xml  Citizen11.xml  Citizen12.xml  Citizen2.xml  Citizen3.xml  Citizen4.xml  Citizen5.xml  Citizen6.xml  Citizen7.xml  Citizen8.xml  Citizen9.xml  Cooking.xml  Ebisu.xml  Hizashi.xml  Homura.xml  Hyuuga_citizen1.xml  Hyuuga_citizen2.xml  Ikagura.xml  Ino Yamanaka.xml  Inuzuka Citizen.lua  Inuzuka Haru.xml  Inuzuka Iraku.xml  Inuzuka_citizen1.xml  Inuzuka_citizen2.xml  Irohimoshi.xml  Iruka.xml  Ishidate.xml  Itsumo.xml  Iwashida.xml  Izukimo.xml  Kakashi.xml  Kitaro.xml  (+33 more)
data/npc/lib/: npc.lua
data/npc/scripts/: Banker.lua  CAT.lua  Citizen.lua  Ebisu.lua  Hyuuga Citizen.lua  Inuzuka Haru.lua  Inuzuka Iraku.lua  Ishidate.lua  Itsumo.lua  Iwashida.lua  Izukimo.lua  Kakashi.lua  Koh Hyuuga.lua  Maito Guy.lua  Medic Iyashi.lua  Medic Izu.lua  Mission.lua  NPC Exame Chunin.lua  Nara Citizen.lua  Nara Shikaku.lua  Nara Shikazu.lua  Naruto Uzumaki.lua  Premium.lua  Shibi Aburame.lua  Shijimi.lua  Suzunne.lua  Takeshi.lua  Tasker.lua  Tekuno.lua  Torifu Akimichi.lua  Yashiro Uchiha.lua  bounty.lua  gambler.lua  iruka.lua  masterShitsu.lua  npcbattle.lua  npcupgrader.lua  (+4 more)
data/spells/: spells.xml
data/talkactions/: talkactions.xml
doc/: LUA_FUNCTIONS
mods/: NpcBattleSystem.xml  custommonsters.xml
schemas/: pgsql.sql
src/: Makefile  Makefile.in  README.md  chat.cpp  combat.cpp  combat.h  config.h  config.h.in  configmanager.cpp  connection.cpp  connection.h  const.h  creature.cpp  creature.h  creatureevent.cpp  creatureevent.h  database.cpp  database.h  definitions.h  enums.h  game.cpp  game.h  iologindata.cpp  iomapserialize.cpp  iomapserialize.h  items.cpp  items.h  luascript.cpp  luascript.h  map.cpp  map.h  monster.cpp  monster.h  npc.cpp  otpch.h  otserv.cpp  otsystem.h  player.cpp  player.h  protocolgame.cpp  (+11 more)
src/database/: databasemysql.cpp  databaseodbc.cpp  databasepgsql.cpp  databasepgsql.h  databasesqlite.cpp
(+194 files in other folders)
